# viktoria

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile-backend  Dockerfile-frontend  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  llms.txt  viktoria_kanban_ui_design_system_spec.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20260515_000001_initial_schema.py  20260516_000002_processed_events.py  20260516_000003_multiboard.py  20260517_000004_tags_subtasks.py  20260517_000005_comments_attachments.py  20260518_000006_analytics.py  20260518_000007_audit_board_id.py  20260518_000008_deadline_decay.py  20260518_000008_deadline_decay_setting.py  20260518_000009_deadline_decay_setting.py  20260518_000010_email_subscriptions.py  20260518_000010_task_done.py  20260519_000001_email_subscriptions.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/ai/: groom.py  router.py
backend/app/analytics/: models.py  router.py  schemas.py  service.py  snapshot.py
backend/app/attachments/: models.py  router.py  schemas.py  service.py  storage.py
backend/app/audit/: __init__.py  models.py  recorder.py  router.py  schemas.py
backend/app/auth/: __init__.py  deps.py  models.py  router.py  schemas.py  service.py
backend/app/automation/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/board/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/comments/: models.py  router.py  schemas.py  service.py
backend/app/events/: consumer.py  models.py  publisher.py  types.py
backend/app/notifications/: __init__.py  email.py  (+7 more)
(+166 files in other folders)
