[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aio-pika>=9.4.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.13.4",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
]
